Mise à jour des fonctionnalités annonces et une partie  d'authentification

--- a/templates/pages/UI/timeline.html
+++ b/templates/pages/UI/timeline.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+
+{% load static%}
+{% block content %}<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -565,3 +567,4 @@
 
     </body>
 </html>
+{%endblock content%}
