--- a/templates/pages/charts/flot.html
+++ b/templates/pages/charts/flot.html
@@ -1,3 +1,5 @@
+{% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -765,3 +767,5 @@
         </script>
     </body>
 </html>
+
+{%endblock content%}
