--- a/templates/pages/examples/lockscreen.html
+++ b/templates/pages/examples/lockscreen.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html class="lockscreen">
     <head>
@@ -116,3 +118,4 @@
         </script>
     </body>
 </html>
+{% endblock content %}
