--- a/templates/pages/examples/login.html
+++ b/templates/pages/examples/login.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html class="bg-black">
     <head>
@@ -61,3 +63,4 @@
 
     </body>
 </html>
+{% endblock content %}
