--- a/templates/pages/examples/register.html
+++ b/templates/pages/examples/register.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html class="bg-black">
     <head>
@@ -63,3 +65,4 @@
 
     </body>
 </html>
+{%endblock content%}
