--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -313,7 +313,7 @@
                     <!-- sidebar menu: : style can be found in sidebar.admin/less -->
                     <ul class="sidebar-menu">
                         <li class="active">
-                            <a href="{% url 'index' %}">
+                            <a href="{% url 'dashboard' %}">
                                 <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                             </a>
                         </li>
