--- a/templates/pages/UI/buttons.html
+++ b/templates/pages/UI/buttons.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -1238,3 +1240,4 @@
 
     </body>
 </html>
+{%endblock content%}
