--- a/templates/pages/UI/general.html
+++ b/templates/pages/UI/general.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -987,3 +989,4 @@
 
     </body>
 </html>
+{%endblock content%}
