--- a/templates/pages/UI/icons.html
+++ b/templates/pages/UI/icons.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -2178,3 +2180,4 @@
 
     </body>
 </html>
+{%endblock content%}
