--- a/templates/pages/UI/jquery-ui.html
+++ b/templates/pages/UI/jquery-ui.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -542,3 +544,4 @@
 
     </body>
 </html>
+{%endblock content%}
