--- a/templates/pages/UI/sliders.html
+++ b/templates/pages/UI/sliders.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -564,3 +566,4 @@
 
     </body>
 </html>
+{%endblock content%}
