--- a/templates/pages/charts/inline.html
+++ b/templates/pages/charts/inline.html
@@ -1,3 +1,5 @@
+{% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -890,3 +892,5 @@
 
     </body>
 </html>
+
+{%endblock content%}
