--- a/templates/pages/charts/morris.html
+++ b/templates/pages/charts/morris.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -556,3 +558,4 @@
 
     </body>
 </html>
+{%endblock content%}
