--- a/templates/pages/empty.html
+++ b/templates/pages/empty.html
@@ -1,17 +1,17 @@
+{% load static %}
+{% block content %}
+
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
         <title>AdminLTE | Dashboard</title>
         <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-        <!-- bootstrap 3.0.2 -->
-        <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <!-- font Awesome -->
-        <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-        <!-- Ionicons -->
-        <link href="../css/ionicons.min.css" rel="stylesheet" type="text/css" />
-        <!-- Theme style -->
-        <link href="../css/AdminLTE.css" rel="stylesheet" type="text/css" />
+        <link href="{% static 'admin/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'admin/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'admin/css/ionicons.min.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'admin/css/AdminLTE.css' %}" rel="stylesheet" type="text/css" />
+
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,9 +23,9 @@
     <body class="skin-black">
         <!-- header logo: style can be found in header.less -->
         <header class="header">
-            <a href="../index.html" class="logo">
+            <a href="{% url 'index' %}" class="logo">
                 <!-- Add the class icon to your logo image or logo icon to add the margining -->
-                AdminLTE
+                DEKON NET
             </a>
             <!-- Header Navbar: style can be found in header.less -->
             <nav class="navbar navbar-static-top" role="navigation">
@@ -52,7 +52,7 @@
                                         <li><!-- start message -->
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="../img/avatar3.png" class="img-circle" alt="User Image"/>
+                                                    <img src="{% static 'admin/img/avatar3.png' %}" class="img-circle" alt="User Image"/>
                                                 </div>
                                                 <h4>
                                                     Support Team
@@ -64,7 +64,7 @@
                                         <li>
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="../img/avatar2.png" class="img-circle" alt="user image"/>
+                                                    <img src="{% static 'admin/img/avatar2.png' %}" class="img-circle" alt="user image"/>
                                                 </div>
                                                 <h4>
                                                     AdminLTE Design Team
@@ -76,7 +76,7 @@
                                         <li>
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="../img/avatar.png" class="img-circle" alt="user image"/>
+                                                    <img src="{% static 'admin/img/avatar.png' %}" class="img-circle" alt="user image"/>
                                                 </div>
                                                 <h4>
                                                     Developers
@@ -88,7 +88,7 @@
                                         <li>
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="../img/avatar2.png" class="img-circle" alt="user image"/>
+                                                    <img src="{% static 'admin/img/avatar2.png' %}" class="img-circle" alt="user image"/>
                                                 </div>
                                                 <h4>
                                                     Sales Department
@@ -100,7 +100,7 @@
                                         <li>
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="../img/avatar.png" class="img-circle" alt="user image"/>
+                                                    <img src="{% static 'admin/img/avatar.png' %}" class="img-circle" alt="user image"/>
                                                 </div>
                                                 <h4>
                                                     Reviewers
@@ -235,7 +235,7 @@
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header bg-light-blue">
-                                    <img src="../img/avatar3.png" class="img-circle" alt="User Image" />
+                                    <img src="{% static 'admin/img/avatar3.png' %}" class="img-circle" alt="User Image" />
                                     <p>
                                         Jane Doe - Web Developer
                                         <small>Member since Nov. 2012</small>
@@ -276,7 +276,7 @@
                     <!-- Sidebar user panel -->
                     <div class="user-panel">
                         <div class="pull-left image">
-                            <img src="../img/avatar3.png" class="img-circle" alt="User Image" />
+                            <img src="{% static 'admin/img/avatar3.png' %}" class="img-circle" alt="User Image" />
                         </div>
                         <div class="pull-left info">
                             <p>Hello, Jane</p>
@@ -294,15 +294,14 @@
                         </div>
                     </form>
                     <!-- /.search form -->
-                    <!-- sidebar menu: : style can be found in sidebar.less -->
                     <ul class="sidebar-menu">
-                        <li class="active">
-                            <a href="../index.html">
+                        <li>
+                            <a href="{% url 'dashboard' %}">
                                 <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                             </a>
                         </li>
-                        <li>
-                            <a href="widgets.html">
+                        <li class="active">
+                            <a href="{% url 'widgets' %}">
                                 <i class="fa fa-th"></i> <span>Widgets</span> <small class="badge pull-right bg-green">new</small>
                             </a>
                         </li>
@@ -313,9 +312,9 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="charts/morris.html"><i class="fa fa-angle-double-right"></i> Morris</a></li>
-                                <li><a href="charts/flot.html"><i class="fa fa-angle-double-right"></i> Flot</a></li>
-                                <li><a href="charts/inline.html"><i class="fa fa-angle-double-right"></i> Inline charts</a></li>
+                                <li><a href="{% url 'morris' %}"><i class="fa fa-angle-double-right"></i> Morris</a></li>
+                                <li><a href="{% url 'flot' %}"><i class="fa fa-angle-double-right"></i> Flot</a></li>
+                                <li><a href="{% url 'inline' %}"><i class="fa fa-angle-double-right"></i> Inline charts</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -325,11 +324,11 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="UI/general.html"><i class="fa fa-angle-double-right"></i> General</a></li>
-                                <li><a href="UI/icons.html"><i class="fa fa-angle-double-right"></i> Icons</a></li>
-                                <li><a href="UI/buttons.html"><i class="fa fa-angle-double-right"></i> Buttons</a></li>
-                                <li><a href="UI/sliders.html"><i class="fa fa-angle-double-right"></i> Sliders</a></li>
-                                <li><a href="UI/timeline.html"><i class="fa fa-angle-double-right"></i> Timeline</a></li>
+                                <li><a href="{% url 'general' %}"><i class="fa fa-angle-double-right"></i> General</a></li>
+                                <li><a href="{% url 'icons' %}"><i class="fa fa-angle-double-right"></i> Icons</a></li>
+                                <li><a href="{% url 'buttons' %}"><i class="fa fa-angle-double-right"></i> Buttons</a></li>
+                                <li><a href="{% url 'sliders' %}"><i class="fa fa-angle-double-right"></i> Sliders</a></li>
+                                <li><a href="{% url 'timeline' %}"><i class="fa fa-angle-double-right"></i> Timeline</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -338,9 +337,9 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="forms/general.html"><i class="fa fa-angle-double-right"></i> General Elements</a></li>
-                                <li><a href="forms/advanced.html"><i class="fa fa-angle-double-right"></i> Advanced Elements</a></li>
-                                <li><a href="forms/editors.html"><i class="fa fa-angle-double-right"></i> Editors</a></li>                                
+                                <li><a href="{% url 'general_elements' %}"><i class="fa fa-angle-double-right"></i> General Elements</a></li>
+                                <li><a href="{% url 'advanced_elements' %}"><i class="fa fa-angle-double-right"></i> Advanced Elements</a></li>
+                                <li><a href="{% url 'editors' %}"><i class="fa fa-angle-double-right"></i> Editors</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -349,18 +348,18 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="tables/simple.html"><i class="fa fa-angle-double-right"></i> Simple tables</a></li>
-                                <li><a href="tables/data.html"><i class="fa fa-angle-double-right"></i> Data tables</a></li>
+                                <li><a href="{% url 'simple_tables'%}"><i class="fa fa-angle-double-right"></i> Simple tables</a></li>
+                                <li><a href="{% url 'data_tables'%}"><i class="fa fa-angle-double-right"></i> Data tables</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="calendar.html">
+                            <a href="{% url 'calendar'%}">
                                 <i class="fa fa-calendar"></i> <span>Calendar</span>
                                 <small class="badge pull-right bg-red">3</small>
                             </a>
                         </li>
                         <li>
-                            <a href="mailbox.html">
+                            <a href="{% url 'mailbox'%}">
                                 <i class="fa fa-envelope"></i> <span>Mailbox</span>
                                 <small class="badge pull-right bg-yellow">12</small>
                             </a>
@@ -371,13 +370,13 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="examples/invoice.html"><i class="fa fa-angle-double-right"></i> Invoice</a></li>
-                                <li><a href="examples/login.html"><i class="fa fa-angle-double-right"></i> Login</a></li>
-                                <li><a href="examples/register.html"><i class="fa fa-angle-double-right"></i> Register</a></li>
-                                <li><a href="examples/lockscreen.html"><i class="fa fa-angle-double-right"></i> Lockscreen</a></li>
-                                <li><a href="examples/404.html"><i class="fa fa-angle-double-right"></i> 404 Error</a></li>
-                                <li><a href="examples/500.html"><i class="fa fa-angle-double-right"></i> 500 Error</a></li>                                
-                                <li><a href="examples/blank.html"><i class="fa fa-angle-double-right"></i> Blank Page</a></li>
+                                <li><a href="{% url 'invoice'%}"><i class="fa fa-angle-double-right"></i> Invoice</a></li>
+                                <li><a href="{% url 'login'%}"><i class="fa fa-angle-double-right"></i> Login</a></li>
+                                <li><a href="{% url 'register'%}"><i class="fa fa-angle-double-right"></i> Register</a></li>
+                                <li><a href="{% url 'lockscreen'%}"><i class="fa fa-angle-double-right"></i> Lockscreen</a></li>
+                                <li><a href="{% url 'error_404'%}"><i class="fa fa-angle-double-right"></i> 404 Error</a></li>
+                                <li><a href="{% url 'error_500'%}"><i class="fa fa-angle-double-right"></i> 500 Error</a></li>
+                                <li><a href="{% url 'blank_page'%}"><i class="fa fa-angle-double-right"></i> Blank Page</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -437,13 +436,13 @@
             </aside><!-- /.right-side -->
         </div><!-- ./wrapper -->
 
-
-        <!-- jQuery 2.0.2 -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <!-- Bootstrap -->
-        <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% static 'admin/js/bootstrap.min.js' %}" type="text/javascript"></script>
         <!-- AdminLTE App -->
-        <script src="../js/AdminLTE/app.js" type="text/javascript"></script>
+        <script src="{% static 'admin/js/AdminLTE/app.js' %}" type="text/javascript"></script>
 
     </body>
 </html>
+
+{% endblock content %}
