--- a/templates/pages/examples/500.html
+++ b/templates/pages/examples/500.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -435,3 +437,4 @@
 
     </body>
 </html>
+{% endblock content%}
