--- a/templates/pages/examples/blank.html
+++ b/templates/pages/examples/blank.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -418,3 +420,4 @@
 
     </body>
 </html>
+{%endblock content%}
