--- a/templates/pages/examples/invoice.html
+++ b/templates/pages/examples/invoice.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -555,3 +557,4 @@
 
     </body>
 </html>
+{%endblock content%}
