--- a/templates/pages/forms/editors.html
+++ b/templates/pages/forms/editors.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -472,3 +474,4 @@
 
     </body>
 </html>
+{%endblock content%}
