--- a/templates/pages/forms/general.html
+++ b/templates/pages/forms/general.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -713,3 +715,4 @@
         <script src="../../js/AdminLTE/app.js" type="text/javascript"></script>
     </body>
 </html>
+{%endblock content%}
