--- a/templates/pages/tables/data.html
+++ b/templates/pages/tables/data.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -1306,3 +1308,4 @@
 
     </body>
 </html>
+{%endblock content%}
