--- a/templates/pages/tables/empty.html
+++ b/templates/pages/tables/empty.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -417,3 +419,4 @@
 
     </body>
 </html>
+{%endblock content%}
