--- a/templates/pages/tables/simple.html
+++ b/templates/pages/tables/simple.html
@@ -1,3 +1,5 @@
+{% load static%}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -718,3 +720,4 @@
 
     </body>
 </html>
+{%endblock content%}
