--- a/templates/pages/widgets.html
+++ b/templates/pages/widgets.html
@@ -1,17 +1,15 @@
+{%load static%}
+{%block content%}
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>AdminLTE | Widgets</title>
+        <title>DEKON NET | Widgets</title>
         <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-        <!-- bootstrap 3.0.2 -->
-        <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <!-- font Awesome -->
-        <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-        <!-- Ionicons -->
-        <link href="../css/ionicons.min.css" rel="stylesheet" type="text/css" />
-        <!-- Theme style -->
-        <link href="../css/AdminLTE.css" rel="stylesheet" type="text/css" />
+        <link href="{% static 'admin/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'admin/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'admin/css/ionicons.min.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'admin/css/AdminLTE.css' %}" rel="stylesheet" type="text/css" />
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,9 +21,9 @@
     <body class="skin-black">
         <!-- header logo: style can be found in header.less -->
         <header class="header">
-            <a href="../index.html" class="logo">
+            <a href="{% url 'index' %}" class="logo">
                 <!-- Add the class icon to your logo image or logo icon to add the margining -->
-                AdminLTE
+                DEKON NET
             </a>
             <!-- Header Navbar: style can be found in header.less -->
             <nav class="navbar navbar-static-top" role="navigation">
@@ -52,7 +50,7 @@
                                         <li><!-- start message -->
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="../img/avatar3.png" class="img-circle" alt="User Image"/>
+                                                    <img src="{% static 'admin/img/avatar3.png' %}" class="img-circle" alt="User Image"/>
                                                 </div>
                                                 <h4>
                                                     Support Team
@@ -64,10 +62,10 @@
                                         <li>
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="../img/avatar2.png" class="img-circle" alt="user image"/>
+                                                    <img src="{% static 'admin/img/avatar2.png' %}" class="img-circle" alt="user image"/>
                                                 </div>
                                                 <h4>
-                                                    AdminLTE Design Team
+                                                    DEKON NET Design Team
                                                     <small><i class="fa fa-clock-o"></i> 2 hours</small>
                                                 </h4>
                                                 <p>Why not buy a new awesome theme?</p>
@@ -76,7 +74,7 @@
                                         <li>
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="../img/avatar.png" class="img-circle" alt="user image"/>
+                                                    <img src="{% static 'admin/img/avatar.png' %}" class="img-circle" alt="user image"/>
                                                 </div>
                                                 <h4>
                                                     Developers
@@ -88,7 +86,7 @@
                                         <li>
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="../img/avatar2.png" class="img-circle" alt="user image"/>
+                                                    <img src="{% static 'admin/img/avatar2.png' %}" class="img-circle" alt="user image"/>
                                                 </div>
                                                 <h4>
                                                     Sales Department
@@ -100,7 +98,7 @@
                                         <li>
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="../img/avatar.png" class="img-circle" alt="user image"/>
+                                                    <img src="{% static 'admin/img/avatar.png' %}" class="img-circle" alt="user image"/>
                                                 </div>
                                                 <h4>
                                                     Reviewers
@@ -235,7 +233,7 @@
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header bg-light-blue">
-                                    <img src="../img/avatar3.png" class="img-circle" alt="User Image" />
+                                    <img src="{% static 'admin/img/avatar3.png' %}" class="img-circle" alt="User Image" />
                                     <p>
                                         Jane Doe - Web Developer
                                         <small>Member since Nov. 2012</small>
@@ -276,7 +274,7 @@
                     <!-- Sidebar user panel -->
                     <div class="user-panel">
                         <div class="pull-left image">
-                            <img src="../img/avatar3.png" class="img-circle" alt="User Image" />
+                            <img src="{% static 'admin/img/avatar3.png' %}" class="img-circle" alt="User Image" />
                         </div>
                         <div class="pull-left info">
                             <p>Hello, Jane</p>
@@ -297,12 +295,12 @@
                     <!-- sidebar menu: : style can be found in sidebar.less -->
                     <ul class="sidebar-menu">
                         <li>
-                            <a href="../index.html">
+                            <a href="{% url 'dashboard' %}">
                                 <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                             </a>
                         </li>
                         <li class="active">
-                            <a href="widgets.html">
+                            <a href="{% url 'widgets' %}">
                                 <i class="fa fa-th"></i> <span>Widgets</span> <small class="badge pull-right bg-green">new</small>
                             </a>
                         </li>
@@ -313,9 +311,9 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="charts/morris.html"><i class="fa fa-angle-double-right"></i> Morris</a></li>
-                                <li><a href="charts/flot.html"><i class="fa fa-angle-double-right"></i> Flot</a></li>
-                                <li><a href="charts/inline.html"><i class="fa fa-angle-double-right"></i> Inline charts</a></li>
+                                <li><a href="{% url 'morris' %}"><i class="fa fa-angle-double-right"></i> Morris</a></li>
+                                <li><a href="{% url 'flot' %}"><i class="fa fa-angle-double-right"></i> Flot</a></li>
+                                <li><a href="{% url 'inline' %}"><i class="fa fa-angle-double-right"></i> Inline charts</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -325,11 +323,11 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="UI/general.html"><i class="fa fa-angle-double-right"></i> General</a></li>
-                                <li><a href="UI/icons.html"><i class="fa fa-angle-double-right"></i> Icons</a></li>
-                                <li><a href="UI/buttons.html"><i class="fa fa-angle-double-right"></i> Buttons</a></li>
-                                <li><a href="UI/sliders.html"><i class="fa fa-angle-double-right"></i> Sliders</a></li>
-                                <li><a href="UI/timeline.html"><i class="fa fa-angle-double-right"></i> Timeline</a></li>
+                                <li><a href="{% url 'general' %}"><i class="fa fa-angle-double-right"></i> General</a></li>
+                                <li><a href="{% url 'icons' %}"><i class="fa fa-angle-double-right"></i> Icons</a></li>
+                                <li><a href="{% url 'buttons' %}"><i class="fa fa-angle-double-right"></i> Buttons</a></li>
+                                <li><a href="{% url 'sliders' %}"><i class="fa fa-angle-double-right"></i> Sliders</a></li>
+                                <li><a href="{% url 'timeline' %}"><i class="fa fa-angle-double-right"></i> Timeline</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -338,9 +336,9 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="forms/general.html"><i class="fa fa-angle-double-right"></i> General Elements</a></li>
-                                <li><a href="forms/advanced.html"><i class="fa fa-angle-double-right"></i> Advanced Elements</a></li>
-                                <li><a href="forms/editors.html"><i class="fa fa-angle-double-right"></i> Editors</a></li>
+                                <li><a href="{% url 'general_elements' %}"><i class="fa fa-angle-double-right"></i> General Elements</a></li>
+                                <li><a href="{% url 'advanced_elements' %}"><i class="fa fa-angle-double-right"></i> Advanced Elements</a></li>
+                                <li><a href="{% url 'editors' %}"><i class="fa fa-angle-double-right"></i> Editors</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -349,18 +347,18 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="tables/simple.html"><i class="fa fa-angle-double-right"></i> Simple tables</a></li>
-                                <li><a href="tables/data.html"><i class="fa fa-angle-double-right"></i> Data tables</a></li>
+                                <li><a href="{% url 'simple_tables'%}"><i class="fa fa-angle-double-right"></i> Simple tables</a></li>
+                                <li><a href="{% url 'data_tables'%}"><i class="fa fa-angle-double-right"></i> Data tables</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="calendar.html">
+                            <a href="{% url 'calendar'%}">
                                 <i class="fa fa-calendar"></i> <span>Calendar</span>
                                 <small class="badge pull-right bg-red">3</small>
                             </a>
                         </li>
                         <li>
-                            <a href="mailbox.html">
+                            <a href="{% url 'mailbox'%}">
                                 <i class="fa fa-envelope"></i> <span>Mailbox</span>
                                 <small class="badge pull-right bg-yellow">12</small>
                             </a>
@@ -371,13 +369,13 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="examples/invoice.html"><i class="fa fa-angle-double-right"></i> Invoice</a></li>
-                                <li><a href="examples/login.html"><i class="fa fa-angle-double-right"></i> Login</a></li>
-                                <li><a href="examples/register.html"><i class="fa fa-angle-double-right"></i> Register</a></li>
-                                <li><a href="examples/lockscreen.html"><i class="fa fa-angle-double-right"></i> Lockscreen</a></li>
-                                <li><a href="examples/404.html"><i class="fa fa-angle-double-right"></i> 404 Error</a></li>
-                                <li><a href="examples/500.html"><i class="fa fa-angle-double-right"></i> 500 Error</a></li>
-                                <li><a href="examples/blank.html"><i class="fa fa-angle-double-right"></i> Blank Page</a></li>
+                                <li><a href="{% url 'invoice'%}"><i class="fa fa-angle-double-right"></i> Invoice</a></li>
+                                <li><a href="{% url 'login'%}"><i class="fa fa-angle-double-right"></i> Login</a></li>
+                                <li><a href="{% url 'register'%}"><i class="fa fa-angle-double-right"></i> Register</a></li>
+                                <li><a href="{% url 'lockscreen'%}"><i class="fa fa-angle-double-right"></i> Lockscreen</a></li>
+                                <li><a href="{% url 'error_404'%}"><i class="fa fa-angle-double-right"></i> 404 Error</a></li>
+                                <li><a href="{% url 'error_500'%}"><i class="fa fa-angle-double-right"></i> 500 Error</a></li>
+                                <li><a href="{% url 'blank_page'%}"><i class="fa fa-angle-double-right"></i> Blank Page</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -402,7 +400,7 @@
                 <!-- Main content -->
                 <section class="content">
                     <h4 class="page-header">
-                        AdminLTE Small Boxes
+                        DEKON NET Small Boxes
                         <small>Small boxes are used for viewing statistics. To create a small box use the class <code>.small-box</code> and mix & match using the <code>bg-*</code> classes.</small>
                     </h4>
                     <!-- Small boxes (Stat box) -->
@@ -567,7 +565,7 @@
 
                     <!-- Widgets as boxes -->
                     <h4 class="page-header">
-                        AdminLTE Boxes
+                        ADEKON NET Boxes
                         <small>We use the base class <code>.box</code> to create widgets simply.</small>
                     </h4>
                     <div class="row">
@@ -719,7 +717,7 @@
                     </div><!-- /.row -->
 
                     <h4 class="page-header">
-                        AdminLTE Solid Boxes
+                        DEKON NET Solid Boxes
                         <small>We use the base class <code>.box</code> and <code>.box-solid</code> to create solid boxes that look like this.</small>
                     </h4>
                     <!-- Solid boxes -->
@@ -854,7 +852,7 @@
                     </div><!-- /.row -->
 
                     <h4 class="page-header">
-                        AdminLTE Tiles
+                        DEKON NET Tiles
                         <small>To create a tile we create a solid box and a <code>.bg-*</code> class ( * being the name of the color) to the box.</small>
                     </h4>
                     <!-- Solid boxes -->
@@ -1024,9 +1022,11 @@
         <!-- jQuery 2.0.2 -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <!-- Bootstrap -->
-        <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% static 'admin/js/bootstrap.min.js' %}" type="text/javascript"></script>
         <!-- AdminLTE App -->
-        <script src="../js/AdminLTE/app.js" type="text/javascript"></script>
+        <script src="{% static 'admin/js/AdminLTE/app.js' %}" type="text/javascript"></script>
 
     </body>
 </html>
+
+{%endblock content%}
