mise à jour de tous les pages et remoderation du templates en fonction de nous

--- a/dekon/templates/dekon/liste_annonces.html
+++ b/dekon/templates/dekon/liste_annonces.html
@@ -1,5 +1,5 @@
 {% extends 'website/base.html' %}
-
+{% load static %}
 {% block content %}
 <div class="container mt-5">
     <h1 class="mb-4">Annonces récentes</h1>
