--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -1,4 +1,4 @@
-{% extends 'website/base.html' %}
+<!-- {% extends 'website/base.html' %}
 
 {% block content %}
 <div class="banner_section layout_padding">
@@ -66,4 +66,4 @@
         </div>
     </div>
 </div>
-{% endblock %} 
+{% endblock %}  -->
