--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Admin Dashboard | DEKONNET</title>
+  <title>Dashboard | DEKONNET</title>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link href="{% static 'admin/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
   <link href="{% static 'admin/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css" />
@@ -12,7 +12,7 @@
 </head>
 <body class="skin-black">
   <header class="header">
-    <a href="/" class="logo">DEKONNET Admin</a>
+    <a href="/" class="logo">DEKONNET</a>
     <nav class="navbar navbar-static-top" role="navigation">
       <div class="navbar-right">
         <ul class="nav navbar-nav">
@@ -39,18 +39,18 @@
       <section class="sidebar">
         <ul class="sidebar-menu">
           <li><a href=""><i class="fa fa-dashboard"></i> <span>Tableau de bord</span></a></li>
-          <li><a href=""><i class="fa fa-users"></i> <span>Gérer les utilisateurs</span></a></li>
-          <li><a href=""><i class="fa fa-bullhorn"></i> <span>Gérer les annonces</span></a></li>
-          <li><a href=""><i class="fa fa-line-chart"></i> <span>Suivi des activités</span></a></li>
-          <li><a href=""><i class="fa fa-warning"></i> <span>Avertissements</span></a></li>
-          <li><a href=""><i class="fa fa-ban"></i> <span>Exclusions</span></a></li>
+          <li><a href=""><i class="fa fa-bullhorn"></i> <span>Mes annonces</span></a></li>
+          <li><a href=""><i class="fa fa-shopping-cart"></i> <span>Mes ventes</span></a></li>
+          <li><a href=""><i class="fa fa-credit-card"></i> <span>Mes achats</span></a></li>
+          <li><a href=""><i class="fa fa-exchange"></i> <span>Mes échanges</span></a></li>
+          <li><a href=""><i class="fa fa-envelope"></i> <span>Messages</span></a></li>
         </ul>
       </section>
     </aside>
 
     <aside class="right-side">
       <section class="content-header">
-        <h1>Tableau de bord administrateur <small>Bonjour {{ request.user.prenom }}</small></h1>
+        <h1>Tableau de bord <small>Bienvenue {{ request.user.prenom }}</small></h1>
       </section>
 
       <section class="content">
@@ -58,44 +58,44 @@
           <div class="col-lg-3 col-xs-6">
             <div class="small-box bg-aqua">
               <div class="inner">
-                <h3>{{ nb_utilisateurs }}</h3>
-                <p>Utilisateurs inscrits</p>
+                <h3>{{ nb_annonces }}</h3>
+                <p>Annonces publiées</p>
               </div>
-              <div class="icon"><i class="fa fa-users"></i></div>
-              <a href="" class="small-box-footer">Voir tout <i class="fa fa-arrow-circle-right"></i></a>
+              <div class="icon"><i class="fa fa-bullhorn"></i></div>
+              <a href="" class="small-box-footer">Voir plus <i class="fa fa-arrow-circle-right"></i></a>
             </div>
           </div>
 
           <div class="col-lg-3 col-xs-6">
             <div class="small-box bg-green">
               <div class="inner">
-                <h3>{{ nb_annonces_valides }}</h3>
-                <p>Annonces validées</p>
+                <h3>{{ nb_ventes }}</h3>
+                <p>Commandes vendues</p>
               </div>
-              <div class="icon"><i class="fa fa-bullhorn"></i></div>
-              <a href="" class="small-box-footer">Gérer <i class="fa fa-arrow-circle-right"></i></a>
+              <div class="icon"><i class="fa fa-shopping-cart"></i></div>
+              <a href="" class="small-box-footer">Voir plus <i class="fa fa-arrow-circle-right"></i></a>
             </div>
           </div>
 
           <div class="col-lg-3 col-xs-6">
             <div class="small-box bg-yellow">
               <div class="inner">
-                <h3>{{ nb_alertes }}</h3>
-                <p>Avertissements actifs</p>
+                <h3>{{ nb_achats }}</h3>
+                <p>Achats effectués</p>
               </div>
-              <div class="icon"><i class="fa fa-warning"></i></div>
-              <a href="" class="small-box-footer">Voir les alertes <i class="fa fa-arrow-circle-right"></i></a>
+              <div class="icon"><i class="fa fa-credit-card"></i></div>
+              <a href="" class="small-box-footer">Voir plus <i class="fa fa-arrow-circle-right"></i></a>
             </div>
           </div>
 
           <div class="col-lg-3 col-xs-6">
             <div class="small-box bg-red">
               <div class="inner">
-                <h3>{{ nb_exclus }}</h3>
-                <p>Utilisateurs exclus</p>
+                <h3>{{ nb_messages }}</h3>
+                <p>Messages reçus</p>
               </div>
-              <div class="icon"><i class="fa fa-ban"></i></div>
-              <a href="" class="small-box-footer">Voir la liste <i class="fa fa-arrow-circle-right"></i></a>
+              <div class="icon"><i class="fa fa-envelope"></i></div>
+              <a href="" class="small-box-footer">Voir plus <i class="fa fa-arrow-circle-right"></i></a>
             </div>
           </div>
         </div>
